and Bzr.  VC will now pass a multiple-file commit to these systems as
a single changeset.

*** vc-dir is a new command that displays file names and their VC
status.  It allows to apply various VC operations to a file or a
set of files.

*** Clicking on the VC mode-line entry now pops the VC menu.

*** The VC mode-line entry now has a tooltip that explains the VC file status.

*** In VC Annotate mode, you can type V to toggle the annotation visibility.

*** In VC Annotate mode, you can type f to show the file revision on
the current line.

*** vc-git supports the "git grep" command.

*** Asynchronous VC commands display [Waiting...] in the mode-line
of the corresponding buffer as long as the asynchronous process is
active.

*** Log entries can be modified using the key "e" in log-view.
For now only CVS, RCS, SCCS and SVN support this functionality.
This is done by the `modify-change-comment' backend function.

*** VC Support for Meta-CVS has been removed for lack of maintainer able
to update it to the new VC.

** smerge-refine highlights word-level details of changes in conflict.
It's used automatically as you move through conflicts, see smerge-auto-refine.

** Diff mode

*** diff-refine-hunk highlights word-level details of changes in a diff hunk.
It's used automatically as you move through hunks, see
diff-auto-refine.  It is bound to `C-c C-b'.

*** diff-add-change-log-entries-other-window iterates through the diff
buffer and tries to create ChangeLog entries for each change.
It is bound to `C-x 4 A'.

** log-edit now has a command bound to C-c C-d to show the diff for
the files involved.

** In Change Log mode, the new function `change-log-find-file', bound to
C-c C-f, finds the file associated with the current log entry.

** sgml-electric-tag-pair-mode lets you simultaneously edit matched tag pairs.

** The appearance of superscript and subscript in TeX is more customizable.
See the documentation of the variables: tex-fontify-script,